--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "bootstrap": "^4.3.1",
+    "history": "^4.6.3",
+    "query-string": "^6.4.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
     "react-redux": "^6.0.1",
-    "react-toastify": "^4.5.2",
-    "react-router-redux": "^4.0.8",
-    "history": "^4.6.3",
-    "react-router-dom": "^4.3.1",
     "react-router": "^3.2.1",
-    "react-scripts": "2.1.8"
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "2.1.8",
+    "react-toastify": "^4.5.2",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
